--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
               и заказчикам. Все будет хорошо!
            </div>
            <div class="header-button">
-              <a href="#call-back">Сделать заказ</a>
+              <a href="#call-back" data-effect="mfp-with-fade">Сделать заказ</a>
            </div>
         </div>
      </div>
